update bug di portfolio

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </div>
         </section>
         <!-- Portfolio Grid-->
-        <section class="page-section bg-light" id="program">
+        <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">PROGRAM UNGGULAN</h2>
@@ -446,7 +446,7 @@
     <h5 class="text-uppercase mb-3">Informasi</h5>
     <ul class="list-unstyled">
       <li><a href="#pendaftaran" class="footer-link">Pendaftaran</a></li>
-      <li><a href="#program" class="footer-link">Program</a></li>
+      <li><a href="#portfolio" class="footer-link">Program</a></li>
       <li><a href="#team" class="footer-link">Struktur</a></li>
       <li><a href="#services" class="footer-link">Tentang</a></li>
     </ul>
