update chat pesan WA

--- a/pendaftaran.html
+++ b/pendaftaran.html
@@ -157,15 +157,11 @@
         Konfirmasi transfer dapat dilakukan melalui WhatsApp Admin
       </p>
 
-      <div class="text-center">
-        <a
-          href="https://wa.me/6285211560165?text=Assalamu’alaikum%20Admin%20PPDB%20Al-Hanif,%20saya%20ingin%20mengkonfirmasi%20pembayaran%20pendaftaran%20Santri."
-          target="_blank"
-          class="btn-wa"
-        >
+      <a href="#" id="btnWA" class="btn-wa">
           💬 Hubungi Admin via WhatsApp
         </a>
-      </div>
+
+        <script src="js/pendaftaran.js" defer></script>
     </div>
   </div>
 </section>
