--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
       </div>
     </div>
 
-    <section id="pendaftaran" class="page-section bg-light">
+    <section id="link-pendaftaran" class="page-section bg-light">
   <div class="container">
     <div class="text-center mb-5">
       <h2 class="section-heading text-uppercase">Link Pendaftaran Santri Baru</h2>
