--- a/login.html
+++ b/login.html
@@ -45,6 +45,28 @@
     .btn-login:hover {
       background: #d4ac0d;
     }
+
+        #errorBox {
+      animation: fadeIn .3s ease;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-5px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+        @keyframes shake {
+      0% { transform: translateX(0); }
+      25% { transform: translateX(-5px); }
+      50% { transform: translateX(5px); }
+      75% { transform: translateX(-5px); }
+      100% { transform: translateX(0); }
+    }
+
+    .shake {
+      animation: shake 0.3s;
+    }
+
   </style>
 </head>
 
@@ -54,6 +76,16 @@
 <div class="login-card text-center">
 
   <form id="loginForm">
+
+        <!-- Notifikasi Error -->
+        <div
+      id="errorMsg"
+      class="alert alert-danger py-2 mt-2 d-none"
+      role="alert"
+    >
+      ❌ Astagfirullah Ente Salah Password !
+    </div>
+
 
     <img src="assets/img/logo-contact.jpg" alt="Logo Al-Hanif">
 
@@ -68,15 +100,38 @@
       </select>
     </div>
 
-    <div class="mb-4 text-start" id="passwordGroup" style="display: none;">
+     <!-- ❗ Kolom Password -->
+        <div class="mb-4 text-start" id="passwordGroup" style="display: none;">
       <label class="form-label">Password</label>
-      <input type="password" id="password" class="form-control" placeholder="Masukkan password">
+
+      <div class="input-group">
+        <input
+          type="password"
+          id="password"
+          class="form-control"
+          placeholder="Masukkan password"
+        >
+        <button
+          type="button"
+          class="btn btn-outline-secondary"
+          id="togglePassword"
+        >
+          <i class="fas fa-eye"></i>
+        </button>
+      </div>
     </div>
 
     <!-- ❗ tombol HARUS di dalam form -->
-    <button type="submit" class="btn btn-login w-100">
-      <i class="fas fa-sign-in-alt me-2"></i> Masuk
+        <button type="submit" class="btn btn-login w-100" id="loginBtn">
+      <span id="btnText">
+        <i class="fas fa-sign-in-alt me-2"></i> Masuk
+      </span>
+      <span
+        id="btnLoading"
+        class="spinner-border spinner-border-sm d-none"
+      ></span>
     </button>
+
 
   </form>
 
