--- a/login.html
+++ b/login.html
@@ -87,7 +87,7 @@
     </div>
 
 
-    <img src="assets/img/logo-contact.jpg" alt="Logo Al-Hanif">
+    <img src="assets/img/logo-alhanif.jpg" alt="Logo Al-Hanif">
 
     <h4 class="mb-3">Login Sistem Pendaftaran</h4>
     <p class="text-muted mb-4">Pondok Pesantren Yatim Al-Hanif</p>
