update tittle google

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>OFFICIAL WEBSITE PONPES YATIM AL-HANIF</title>
+        <meta name="description" content="Website resmi Pondok Pesantren Yatim Al-Hanif. Informasi pendaftaran santri baru, kontak, dan profil pondok.">
+        <meta name="keywords" content="pondok pesantren yatim al-hanif, ponpes yatim alhanif, pesantren yatim, pondok pesantren al hanif, pendaftaran santri">
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
