--- a/pendaftaran.html
+++ b/pendaftaran.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
+        <meta name="robots" content="noindex, nofollow">
         <title>Pendaftaran Santri Baru | Pondok Pesantren Yatim Al-Hanif</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
