--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
         <meta name="description" content="Website resmi Pondok Pesantren Yatim Al-Hanif. Informasi pendaftaran santri baru, kontak, dan profil pondok.">
         <meta name="keywords" content="pondok pesantren yatim al-hanif, ponpes yatim alhanif, pesantren yatim, pondok pesantren al hanif, pendaftaran santri">
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" href="/favicon-48.png" sizes="48x48" type="image/png">
+        <link rel="icon" href="/favicon-96.png" sizes="96x96" type="image/png">
+        <link rel="icon" href="/favicon-192.png" sizes="192x192" type="image/png">
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
