--- a/admin-psya-8f92.html
+++ b/admin-psya-8f92.html
@@ -6,6 +6,11 @@
   <meta name="robots" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+ <!-- Favicon-->
+        <link rel="icon" href="/favicon-48.png" sizes="48x48" type="image/png">
+        <link rel="icon" href="/favicon-96.png" sizes="96x96" type="image/png">
+        <link rel="icon" href="/favicon-192.png" sizes="192x192" type="image/png">
+
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
