--- a/pendaftaran.html
+++ b/pendaftaran.html
@@ -7,8 +7,10 @@
         <meta name="author" content="" />
         <meta name="robots" content="noindex, nofollow">
         <title>Pendaftaran Santri Baru | Pondok Pesantren Yatim Al-Hanif</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+         <!-- Favicon-->
+        <link rel="icon" href="/favicon-48.png" sizes="48x48" type="image/png">
+        <link rel="icon" href="/favicon-96.png" sizes="96x96" type="image/png">
+        <link rel="icon" href="/favicon-192.png" sizes="192x192" type="image/png">
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
