--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>OFFICIAL WEBSITE PONPES YATIM AL-HANIF</title>
+        <title>OFFICIAL WEBSITE PONDOK PESANTREN YATIM AL-HANIF</title>
         <meta name="description" content="Website resmi Pondok Pesantren Yatim Al-Hanif. Informasi pendaftaran santri baru, kontak, dan profil pondok.">
-        <meta name="keywords" content="pondok pesantren yatim al-hanif, ponpes yatim alhanif, pesantren yatim, pondok pesantren al hanif, pendaftaran santri">
+        <meta name="keywords" content="pondok pesantren yatim al-hanif, ponpes yatim alhanif, pesantren yatim, pondok pesantren yatim al hanif, ponpes, pendaftaran santri">
         <!-- Favicon-->
         <link rel="icon" href="/favicon-48.png" sizes="48x48" type="image/png">
         <link rel="icon" href="/favicon-96.png" sizes="96x96" type="image/png">
