update resolusi image

--- a/index.html
+++ b/index.html
@@ -281,38 +281,67 @@
             <h2 class="section-heading text-uppercase">Struktur Kepengurusan</h2> 
             <h3 class="section-subheading text-muted">Pimpinan dan pengelola Pondok Pesantren Yatim Al-Hanif</h3>
         <div class="row text-center">
+
+     <div class="col-lg-3 col-md-6">
+    <div class="team-member text-center">
+        <img 
+        src="assets/img/team/1.jpg"
+        class="mx-auto rounded-circle"
+        width="208"
+        height="208"
+        loading="lazy"
+        alt="KH Ahmad Jazuli - Pimpinan PonPes Yatim Alhanif"
+        />
+        <h4>KH Ahmad Jazuli</h4>
+        <p class="text-muted">Pimpinan PonPes Yatim Al-Hanif</p>
+    </div>
+    </div>
+
+     <div class="col-lg-3 col-md-6">
+    <div class="team-member text-center">
+        <img 
+        src="assets/img/team/2.jpg"
+        class="mx-auto rounded-circle"
+        width="208"
+        height="208"
+        loading="lazy"
+        alt="Ustzh Mailan S.E. - Bendahara PonPes Yatim Alhanif"
+        />
+        <h4>Ustzh Mailan S.E.</h4>
+        <p class="text-muted">Bendahara PonPes Yatim Al-Hanif</p>
+    </div>
+    </div>
+
+
     <div class="col-lg-3 col-md-6">
-        <div class="team-member">
-            <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
-            <h4>KH Ahmad Jazuli</h4>
-            <p class="text-muted">Pimpinan PonPes Yatim Al-Hanif</p>
-        </div>
+    <div class="team-member text-center">
+        <img 
+        src="assets/img/team/4.jpg"
+        class="mx-auto rounded-circle"
+        width="208"
+        height="208"
+        loading="lazy"
+        alt="Ust Abdul Gofur S.Pd.I - Kepala Madrasah Tsanawiyah"
+        />
+        <h4>Ust Abdul Gofur S.Pd.I</h4>
+        <p class="text-muted">Kepala Madrasah Tsanawiyah</p>
+    </div>
     </div>
 
     <div class="col-lg-3 col-md-6">
-        <div class="team-member">
-            <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
-            <h4>Ustzh Mailan S,E.</h4>
-            <p class="text-muted">Bendahara PonPes Yatim Al-Hanif</p>
-        </div>
+    <div class="team-member text-center">
+        <img 
+        src="assets/img/team/3.jpg"
+        class="mx-auto rounded-circle"
+        width="208"
+        height="208"
+        loading="lazy"
+        alt="Ustzh Zulfana ,S,Si. - Kepala Madrasah Aliyah"
+        />
+        <h4>Ustzh Zulfana .S.Si.</h4>
+        <p class="text-muted">Kepala Madrasah Aliyah</p>
     </div>
-
-    <div class="col-lg-3 col-md-6">
-        <div class="team-member">
-            <img class="mx-auto rounded-circle" src="assets/img/team/4.jpg" alt="..." />
-            <h4>Ust Abdul Gofur S,Pd,I.</h4>
-            <p class="text-muted">Kepala Madrasah Tsanawiyah</p>
-        </div>
     </div>
-
-    <div class="col-lg-3 col-md-6">
-        <div class="team-member">
-            <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
-            <h4>Ustzh Zulfana S,Si.</h4>
-            <p class="text-muted">Kepala Madrasah Aliyah</p>
-        </div>
-    </div>
-</div>
 
 <!-- Alur Pendaftaran-->
         <section class="page-section bg-light" id="pendaftaran">
