update NPSS dan Gmail

--- a/pendaftaran.html
+++ b/pendaftaran.html
@@ -182,13 +182,27 @@
             </div>
                 <div class="row text-white">
 
-  <!-- PROFIL -->
-  <div class="col-lg-3 col-md-6 mb-4">
-    <img src="assets/img/logo-contact.jpg" class="footer-logo" alt="Logo Pondok">
-    <p class="small">
-      Pondok Pesantren Yatim Al-Hanif
+   <!-- PROFIL -->
+  <div class="col-lg-3 col-md-6 mb-4 footer-profil">
+  <img src="assets/img/logo-contact.jpg" class="footer-logo" alt="Logo Pondok">
+
+    <p class="small footer-nama">
+    Pondok Pesantren Yatim Al-Hanif
     </p>
-  </div>
+     <!-- NSPP (TEKS SAJA) -->
+    <p class="small footer-nspp">
+    NSPP : 510036740124
+    </p>
+      <!-- Email -->
+    <p class="small footer-email">
+    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=alhanifponpesyatim@gmail.com"
+       target="_blank"
+       class="footer-link">
+      <i class="fas fa-envelope me-2"></i>
+      alhanifponpesyatim@gmail.com
+    </a>
+  </p>
+</div>
 
   <!-- MEDIA SOSIAL -->
   <div class="col-lg-3 col-md-6 mb-4">
