--- a/admin-psya-8f92.html
+++ b/admin-psya-8f92.html
@@ -198,7 +198,7 @@ if (sessionStorage.getItem("adminLogin") !== "true") {
         <th>Nama</th>
         <th>Jenjang</th>
         <th>Status</th>
-        <th>Aksi</th>
+        <th>Action</th>
       </tr>
     </thead>
     <tbody id="tableBody"></tbody>
